Feito até wrapper (video 14) prox imagens

--- a/HTML-tutorial/body and other stuffs/index.html
+++ b/HTML-tutorial/body and other stuffs/index.html
@@ -15,7 +15,7 @@
         -->
     <section>
         <h2>latest posts</h2>
-        <h3>here you can see all the latast post</h3>
+        <h3>here you can see all the latest post</h3>
         <article>
             <h4>this is the post title</h4>
             <p>this is the content inside this post</p>
@@ -24,7 +24,7 @@
         <article>
             <h4>this is the post title</h4>
             <p>this is the content <br> inside this post</p>
-            <h5>author daniel</h5>
+            <h5>author richard</h5>
         </article>
     </section>
 
