--- a/HTML-tutorial/new page/pages/contact.html
+++ b/HTML-tutorial/new page/pages/contact.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1>segunda pag</h1>
-        <p class = "p-welcome">noems e tudo mais bla bla</p>
+        <p class = "p-welcome">nomes e tudo mais bla bla</p>
         <p class = "p-welcome">emails e tudo mais</p>
         <a href="../index.html">voltar</a>
     </body>
